# data-engine-studio

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  ROADMAP.md  SECURITY.md  deny.toml  pyproject.toml
crates/des-app/: Cargo.toml
crates/des-app/src/: catalog.rs  command.rs  lib.rs  model.rs  sample_catalog.rs  sample_data.rs  state.rs
crates/des-app/tests/: state_contracts.rs
crates/des-apple-dispatch/: Cargo.toml
crates/des-apple-dispatch/src/: lib.rs
crates/des-core/: Cargo.toml
crates/des-core/src/: identity.rs  lib.rs
crates/des-document/core/: Cargo.toml
crates/des-document/core/src/: animation.rs  css.rs  document.rs  document_tests.rs  element.rs  engine.rs  layout.rs  lib.rs  projection.rs  query.rs  scroll.rs  state.rs  style.rs  text.rs  view.rs
crates/des-document/core/tests/: document_contracts.rs  layout_engine_spike.rs
crates/des-document/egui/: Cargo.toml
crates/des-document/egui/src/: host_config.rs  lib.rs
crates/des-document/egui/src/adapter/: input.rs  mod.rs  paint.rs  text.rs
crates/des-document/html/: Cargo.toml
crates/des-document/html/src/: lib.rs
crates/des-document/html/tests/: html_contracts.rs
crates/des-document/layout/: Cargo.toml  NOTICE.md
crates/des-document/layout/src/: floating.rs
crates/des-document/layout/src/compute/: mod.rs
crates/des-document/layout/src/compute/grid/: placement.rs
crates/des-document/layout/src/style/: dimension.rs  mod.rs
crates/des-document/layout/src/tree/: layout_tree.rs  mod.rs  node.rs  traits.rs
crates/des-document/layout/src/util/: debug.rs  print.rs  resolve.rs  sys.rs
crates/des-document/layout/tests/: floating_contracts.rs  layout_algorithm_contracts.rs
crates/des-document/template/tests/: template_contracts.rs
crates/des-document/text/: Cargo.toml
crates/des-document/text/src/: lib.rs
crates/des-document/widgets/: Cargo.toml
crates/des-document/widgets/src/: auto_scroll.rs  context_menu.rs  lib.rs  sortable.rs
crates/des-graph-egui/: Cargo.toml  NOTICE.md  README.md
crates/des-graph-egui/examples/: demo.rs
crates/des-graph-egui/src/: bezier.rs  edge.rs  layout.rs  lib.rs  node.rs  socket.rs
crates/des-graph-egui/src/socket/: layout.rs
crates/des-graph-egui/src/socket/layout/: grid.rs
crates/des-layout-engine/: Cargo.toml  LICENSE-TAFFY.md  NOTICE.md
crates/des-layout-engine/src/: floating.rs  geometry.rs  lib.rs  prelude.rs  scroll.rs  style_helpers.rs  test.rs
crates/des-layout-engine/src/compute/: block.rs  flexbox.rs  float.rs  leaf.rs  mod.rs
crates/des-layout-engine/src/compute/grid/: alignment.rs  explicit_grid.rs  implicit_grid.rs  mod.rs  track_sizing.rs
crates/des-layout-engine/src/compute/grid/types/: cell_occupancy.rs  coordinates.rs  grid_item.rs  grid_track.rs  grid_track_counts.rs  named.rs
crates/des-layout-engine/src/style/: available_space.rs  compact_length.rs  dimension.rs  flex.rs  grid.rs  mod.rs
crates/des-layout-engine/src/tree/: cache.rs  layout.rs  layout_tree.rs  mod.rs  taffy_tree.rs  traits.rs
crates/des-layout-engine/src/util/: math.rs  parse.rs  resolve.rs  sys.rs
crates/des-layout-engine/tests/: floating_contracts.rs
crates/des-python/: Cargo.toml
crates/des-python/src/: lib.rs
crates/des-template/: Cargo.toml
crates/des-template/src/: lib.rs
crates/des-template/tests/: template_contracts.rs
crates/des-ui-document/: Cargo.toml
crates/des-ui-document/src/: animation.rs  document.rs  document_tests.rs  element.rs  engine.rs  geometry.rs  layout.rs  lib.rs  query.rs  scene.rs  scroll.rs  state.rs  style.rs  table.rs  text.rs  update.rs
crates/des-ui-document/tests/: document_contracts.rs  document_scene.rs  layout_engine_spike.rs  taffy_spike.rs
crates/des-ui-egui/: Cargo.toml
crates/des-ui-egui/src/: app.rs  debug_overlay.rs  graph_canvas.rs  graph_view.rs  host_config.rs  lib.rs  shell.rs  test_graphics.rs  theme.rs  ui_lab.rs  workspace_catalog.rs
crates/des-ui-egui/src/adapter/: input.rs  mod.rs  paint.rs  text.rs
crates/des-ui-egui/src/ui_lab/: egui_adapter.rs  runtime_adapter.rs  styles.rs  tests.rs  views.rs
crates/des-ui-egui/src/ui_lab/styles/: framework.rs  mod.rs
crates/des-ui-lab/: Cargo.toml
crates/des-ui-lab/src/: app.rs  graphics_testing.rs  lib.rs  ui_lab.rs
crates/des-ui-lab/src/ui_lab/: html.rs  shadow_styler.rs  tests.rs  views.rs
crates/des-ui-lab/src/ui_lab/html/: animation.html  debug-overlay-root.html  debug-overlay-title.html  debug-overlay.html  drag-grid.html  drag-scroll-list-card.html  drag-scroll-list-title.html  drag-scroll-list.html  drag-workbench.html  draggable-shell.html  floating.html  graph.html  interaction-cards.html  interaction-controls.html  interaction-loop.html  interaction-shell.html  lab-body.html  lab-root.html  layout.html  nav.html  nesting.html  scrolling.html  shadow-specimens.html  stage.html  structural-selectors.html  styling-overview.html  table.html  text-specimens.html  topbar.html
crates/des-ui-lab/src/ui_lab/styles/: framework.css  framework.rs  lab.css  mod.rs
crates/des-ui-render/: Cargo.toml
crates/des-ui-render/src/: lib.rs
crates/des-ui-runtime/: Cargo.toml
crates/des-ui-runtime/src/: animation.rs  element.rs  layout.rs  lib.rs  runtime.rs  scroll.rs  state.rs
crates/des-ui-runtime/tests/: runtime_contracts.rs
crates/des-ui-text/: Cargo.toml
crates/des-ui-text/assets/fonts/inter/: README.md
crates/des-ui-text/src/: lib.rs
crates/des-ui-wgpu/: Cargo.toml
crates/des-ui-wgpu/src/: lib.rs
crates/des-ui-widgets/: Cargo.toml
crates/des-ui-widgets/src/: auto_scroll.rs  context_menu.rs  lib.rs  sortable.rs
crates/des-ui-window/: Cargo.toml
crates/des-ui-window/src/: demo.rs  lib.rs  text_rendering_demo.rs
crates/des-ui-winit/: Cargo.toml
crates/des-ui-winit/src/: lib.rs
docs/: MATERIAL_DESIGN_REFERENCES.md  UI_TESTING.md  code-consolidation-audit.md
python/data_engine_studio/: __init__.py  __main__.py  identity.py  launcher.py  native.py
python/tests/: test_native_launcher.py
scripts/: capture-ui.ps1  capture-ui.sh  run-dev.ps1  run-dev.sh
(+1 files in other folders)
