[workspace]
members = [
    "crates/des-app",
    "crates/des-core",
    "crates/des-graph-egui",
    "crates/des-document/layout",
    "crates/des-python",
    "crates/des-template",
    "crates/des-document/core",
    "crates/des-document/egui",
    "crates/des-ui-lab",
    "crates/des-document/widgets",
]
exclude = ["crates/des-apple-dispatch"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bj-data-eng/data-engine-studio"

[workspace.dependencies]
des-app = { path = "crates/des-app", version = "=0.1.0" }
des-core = { path = "crates/des-core", version = "=0.1.0" }
des-graph-egui = { path = "crates/des-graph-egui", version = "=0.1.0" }
des-layout = { path = "crates/des-document/layout", version = "=0.1.0" }
des-template = { path = "crates/des-template", version = "=0.1.0" }
des-document = { path = "crates/des-document/core", version = "=0.1.0" }
des-egui = { path = "crates/des-document/egui", version = "=0.1.0" }
des-ui-lab = { path = "crates/des-ui-lab", version = "=0.1.0" }
des-widgets = { path = "crates/des-document/widgets", version = "=0.1.0" }
eframe = { version = "=0.34.1", default-features = true }
egui = "=0.34.1"
iconflow = { version = "=1.0.0", default-features = false }
layout-rs = "=0.1.3"
filetime = "=0.2.29"
pyo3 = { version = "=0.27.2", features = ["extension-module", "abi3-py311"] }
serde = { version = "=1.0.228", features = ["derive"] }

[patch.crates-io]
dispatch = { path = "crates/des-apple-dispatch" }
