[package]
name = "des-layout-engine"
version.workspace = true
edition = "2021"
rust-version = "1.71"
license = "MIT"
repository.workspace = true
description = "Data Engine Studio layout engine"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
document-features = { version = "0.2.7", optional = true }
grid = { version = "1.0.0", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true, features = ["serde_derive"] }
slotmap = { version = "1.0.6", default-features = false, optional = true }

[features]
default = [
    "std",
    "layout_tree",
    "flexbox",
    "grid",
    "block_layout",
    "float_layout",
    "calc",
    "content_size",
    "detailed_layout_info",
]
alloc = ["serde?/alloc"]
block_layout = []
calc = []
content_size = []
debug = ["std"]
detailed_layout_info = []
flexbox = []
float_layout = []
grid = ["alloc", "dep:grid"]
profile = ["std"]
serde = ["dep:serde"]
std = ["grid?/std", "serde?/std", "slotmap?/std"]
strict_provenance = []
layout_tree = ["dep:slotmap"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("parse"))'] }
