[package]
name = "des-template"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime and compiled template language for Data Engine Studio document markup."

[dependencies]
serde.workspace = true

[dev-dependencies]
filetime.workspace = true
