[package]
name = "des-ui-document"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
taffy = { package = "des-layout-engine", path = "../des-layout-engine", default-features = false, features = ["std", "taffy_tree", "flexbox", "content_size"] }
