[package]
name = "des-ui-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
ui-screenshot = ["eframe/__screenshot", "eframe/glow"]

[dependencies]
des-app.workspace = true
des-core.workspace = true
des-graph-egui.workspace = true
eframe.workspace = true
egui.workspace = true
iconflow = { workspace = true, features = ["pack-lucide"] }
