[package]
name = "des-ui-lab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
ui-screenshot = ["des-ui-egui/ui-screenshot", "eframe/__screenshot", "eframe/glow"]

[dependencies]
des-app.workspace = true
des-core.workspace = true
des-graph-egui.workspace = true
des-ui-document.workspace = true
des-ui-egui.workspace = true
des-ui-widgets.workspace = true
eframe.workspace = true
egui.workspace = true
iconflow = { workspace = true, features = ["pack-lucide"] }

[dev-dependencies]
egui_kittest = { version = "0.34.1", features = ["wgpu"] }
image = { version = "0.25", default-features = false, features = ["png"] }
