[package]
name = "des-ui-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wgpu renderer adapter for Data Engine Studio UI paint commands."

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
des-ui-document.workspace = true
des-ui-render.workspace = true
des-ui-text.workspace = true
epaint.workspace = true
wgpu.workspace = true
