[package]
name = "des-ui-window"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native window shell for Data Engine Studio UI."

[dependencies]
des-ui-document.workspace = true
des-ui-render.workspace = true
des-ui-wgpu.workspace = true
des-ui-winit.workspace = true
pollster.workspace = true
winit.workspace = true
