[package]
name = "des-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
ui-screenshot = ["eframe/__screenshot", "eframe/glow"]

[dependencies]
des-core.workspace = true
des-document.workspace = true
eframe.workspace = true
egui.workspace = true
iconflow = { workspace = true, features = ["pack-lucide"] }
